@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.theoath" name="TheOath" provider-name="host505" version="1.8.12">
+<addon id="plugin.video.theoath" name="TheOath" provider-name="host505" version="1.9.0">
 	<requires>
 		<import addon="xbmc.python" version="2.20.0" />
 		<import addon="script.theoath.artwork" />
@@ -31,6 +31,7 @@
 			<fanart>fanart.jpg</fanart>
 		</assets>
 		<news>
+- See Changelog on Tools menu
 		</news>
 	</extension>
 </addon>
