@@ -44,7 +44,6 @@
         <setting id="torrent.min.seeders" type="slider" label="Minimum Seeders" visible="false" default="1" range="1,100" option="int" />
         <setting type="lsep" label="32343" />
         <setting id="bookmarks" type="bool" label="32344" default="true" />
-        <setting id="rersume.source" type="enum" label="32095" lvalues="32314|32096" default="0" enable="eq(-1,true)" />
         <setting id="bookmarks.auto" type="bool" label="32623" default="false" enable="eq(-2,true)" />
         <setting type="lsep" label="32372" />
         <setting id="crefresh" type="bool" label="32373" default="false" />
@@ -59,9 +58,13 @@
         <setting id="trakt.client_secret" type="text" label="32610" default="" />
         <setting type="sep" />
         <setting id="startup.sync.trakt.status" type="bool" label="32091" default="false" enable="!eq(-6,)"/>
+        <setting id="trakt.scrobble" type="bool" label="32097" default="false" enable="!eq(-7,)"/>
+        <setting type="text" label="32098" enable="false" />
+        <setting id="trakt.scrobble.notify" type="bool" label="32099" default="false" enable="!eq(-9,)+eq(-2,true)"/>
+        <setting id="rersume.source" type="enum" label="32095" lvalues="32314|32096" default="0" enable="!eq(-10,)" />
         <setting type="lsep" label="32614" />
-        <setting id="autoTraktOnStart" type="bool" label="32615" default="false" enable="!eq(-8,)"/>
-        <setting id="schedTraktTime" type="slider" label="32616" default="0" range="0,24" option="int" enable="!eq(-9,)" />
+        <setting id="autoTraktOnStart" type="bool" label="32615" default="false" enable="!eq(-12,)"/>
+        <setting id="schedTraktTime" type="slider" label="32616" default="0" range="0,24" option="int" enable="!eq(-13,)" />
         <setting type="text" label="32617" enable="false" />
     </category>
 
